--- a/pryCastroIEFI/Properties/Resources.resx
+++ b/pryCastroIEFI/Properties/Resources.resx
@@ -122,7 +122,7 @@
     <value>..\Resources\depositphotos_477186434-stock-illustration-arrow-button-right-icon.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
   <data name="icono-clave-contrasena_1134231-5107" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icono-clave-contrasena_1134231-5107.jpg;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
+    <value>..\Resources\icono-clave-contrasena_1134231-51071.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
   <data name="User_icon_2.svg" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\User_icon_2.svg1.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
@@ -133,7 +133,7 @@
   <data name="agregar" type="System.Resources.ResXFileRef, System.Windows.Forms">
     <value>..\Resources\agregar.png;System.Byte[], mscorlib, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b77a5c561934e089</value>
   </data>
-  <data name="icono-clave-contrasena_1134231-5107" type="System.Resources.ResXFileRef, System.Windows.Forms">
-    <value>..\Resources\icono-clave-contrasena_1134231-51071.jpg;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
+  <data name="fondo naranja login" type="System.Resources.ResXFileRef, System.Windows.Forms">
+    <value>..\Resources\fondo naranja login.png;System.Drawing.Bitmap, System.Drawing, Version=4.0.0.0, Culture=neutral, PublicKeyToken=b03f5f7f11d50a3a</value>
   </data>
 </root>
